--- a/quillen.tex
+++ b/quillen.tex
@@ -194,6 +194,10 @@ For a complex-oriented cohomology theory $E$, there is an isomorphism \[BU(n)_E 
 
 \todo{This day should probably have fewer proofs of facts about vector bundles, which will be standard to anyone reading these notes, and more of a discussion about why divisors are called divisors.  Maybe we should even compare Cartier divisors and Weil divisors?  That's discussed in Neil's FPFP paper.}
 
+\todo{A corollary of the splitting principle is supposed to be that a Thom isomorphism for $\CP^\infty$ begets Thom isomorphisms for everything, and hence a ring spectrum map $MU \to E$.  We should produce that corollary here if we can.}
+
+\todo{The stable situation: $BU_E$ and stable divisors.  This lecture might take two days\ldots}
+
 
 
 
@@ -215,7 +219,7 @@ Our job today is to define these two kinds of cohomology operations.
 
 give the specific model for complex bordism that Quillen uses
 
-Landweber--Novikov operations
+Landweber--Novikov operations: the reason the ``total Chern class'' looks so unfamiliar is this: $E_* BU$ is polynomial means $E_* MU$ is polynomial, but $E^* BU$ being a nice algebra doesn't really tell you anything about $E^* MU$, since it's no longer an algebra.  so you really need an $E$--module basis of $E^* MU$, and that's what the nasty expansion of the total chern class is doing.
 
 power operations in $MU$--cohomology.  remark that quadratic power operations in ordinary cohomology give the usual Steenrod operations.
 
@@ -253,25 +257,6 @@ consequence: the subring of coefficients of the formal group law generate
 
 
 
-
-chern classes
-
-landweber--novikov operations, their basic properties
-
-
-
-
-
-
-
-
-
-
-\subsection*{The splitting principle}
-
-the splitting principle: gives Chern classes generally from knowing the calculation for $\CP^\infty$
-
-the cohomology rings $E^* BU(n)$: also gives Chern classes generally, plus there's the divisor scheme structure
 
 % divisors and line bundles on $1$--dimensional objects?
 
@@ -315,16 +300,6 @@ Remembering that $MO(1) \simeq \Susp^{-1} \Susp^\infty \RP^\infty$, we see that 
 \todo{Keep talking.}
 
 ------
-
-The main point is that the fiber map $\CP^{n-1} \to P(V) \to X$ postcomposes by $P(V) \to \CP^\infty$ to the skeletal inclusion, so the Serre spectral sequence degenerates since its fiber is unmolested (or: the Leray--Hirsch theorem). The Chern classes are \emph{defined} by the one remaining multiplicative extension.
-
-The map $X \to BU(n)$ induces a map $X_E \to BU(n)_E \cong \Div_n^+ \CP^\infty_E$, classifying a rank $n$ divisor on $\CP^\infty_E$ base-changed to $X_E$.  this subscheme is selected by the ideal sheaf determined by the total Chern class, but it's also modeled topologically by the projectivization construction.
-
----
-
-Divisors and schemes of divisors on $1$-dimensional formal groups
-
-$BU(n)_E$, $BU_E$, and $(BU \times \Z)_E$
 
 be sure to talk about the total chern class $c_{\mathbf t}$:
 \begin{definition}
