add a URL to the main sheet

--- a/main.tex
+++ b/main.tex
@@ -128,6 +128,11 @@ This class won't have any official assignments. I'll give references as readings
 
 I do want to assemble course notes from this class, but it's unlikely that I will have time to type \emph{all} of them up. Instead, I would like to ``crowdsource'' this somewhat: I'll type up skeletal notes for each lecture, and then we as a class will try to flesh them out as the semester progresses. As incentive to help, those who contribute to the document will have their name included in the acknowledgements, and those who contribute \emph{substantially} will have their name added as a coauthor. Everyone could use more CV items.
 
+The source for this document can be found at
+\begin{center}
+\texttt{https://github.com/ecpeterson/FormalGeomNotes}.
+\end{center}
+
 
 
 \newpage
