--- a/sigma.tex
+++ b/sigma.tex
@@ -2,6 +2,11 @@
 
 \chapter{The $\sigma$-orientation}
 
+
+\todo{Write an introduction for me.}
+
+
+
 \section{Divisors and line bundles}
 
 \section{Weil pairings}
